--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 src/clientversion.cpp export-subst
+src/bitpulsedd filter=lfs diff=lfs merge=lfs -text
+src/bitpulsed filter=lfs diff=lfs merge=lfs -text
